<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterAccountActivity">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/image_button_dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/image_button_dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/username_line_edit"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/username_line_edit"
        android:layout_centerHorizontal="true"
        android:id="@+id/display_message_line_edit"
        android:layout_marginTop="30dp"/>

    <Button
        android:text="@string/action_register_in_short"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_button_line"
        android:layout_marginTop="25dp" />

    <EditText
        android:textAlignment="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_above="@+id/register_button_line"
        android:layout_centerHorizontal="true"
        android:id="@+id/password_register_form"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/prompt_password"/>

    <EditText
        android:textAlignment="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_above="@+id/password_register_form"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_register_form"
        android:hint="@string/npm_text"/>

    <TextView
        android:text="@string/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_text"
        android:layout_below="@+id/image_button_dp"
        android:layout_toLeftOf="@+id/image_button_dp"
        android:layout_toStartOf="@+id/image_button_dp"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp" />

    <TextView
        android:text="@string/display_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/display_message_text"
        android:layout_below="@+id/username_line_edit"
        android:layout_alignLeft="@+id/username_text"
        android:layout_alignStart="@+id/username_text" />

</RelativeLayout>